[gd_scene format=3 uid="uid://cj7ue6i7pj2fb"]

[ext_resource type="Script" uid="uid://ko70ygium1pa" path="res://Tracks/track.gd" id="1_2soc0"]

[sub_resource type="Curve3D" id="Curve3D_j8job"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 3.1266675, -12.754814, 5.522667, -0.81193924, 0.50037, -0.21947289, 0.81193924, -0.50037, 0.21947289, 10.927794, -8.636211, 1.0928755, 0, 0, 0, 0, 0, 0, 11.353729, -5.7654533, 22.606073, 0, 0, 0, 0, 0, 0, -1.412, 0, 30.11248, 0, 0, 0, 0, 0, 0, -13.399, 0, 29.4472, 0, 0, 0, 0, 0, 0, -26.33083, 3.042469, 24.874962, 0, 0, 0, 0, 0, 0, -17.48644, 1.7614641, -8.4155445, 0, 0, 0, 0, 0, 0, -6.5871625, -5.0153656, -2.1070213),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8
up_vector_enabled = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kerva"]
albedo_color = Color(0.09019608, 0.09019608, 0.09019608, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_58hot"]
size = Vector3(4.2854614, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jiixp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5g37k"]
size = Vector3(1, 1, 4.207947)

[sub_resource type="BoxMesh" id="BoxMesh_nuiww"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kerva"]
size = Vector3(4.2006226, 1, 1)

[node name="Track2" type="Path3D" unique_id=1196417104]
curve = SubResource("Curve3D_j8job")
script = ExtResource("1_2soc0")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="." unique_id=1861846978]
polygon = PackedVector2Array(2, 0, 2, 0.05, -2, 0.05, -2, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_kerva")

[node name="StartDetector" type="Area3D" parent="CSGPolygon3D" unique_id=1938198562]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGPolygon3D/StartDetector" unique_id=1466429589]
transform = Transform3D(0.9729616, 0, 0.23096684, 0, 1, 0, -0.23096684, 0, 0.9729616, 0.058440387, 0, 0.18593578)
shape = SubResource("BoxShape3D_58hot")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGPolygon3D/StartDetector" unique_id=872251620]
mesh = SubResource("BoxMesh_jiixp")

[node name="FinishDetector" type="Area3D" parent="CSGPolygon3D" unique_id=1719197141]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4210951, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGPolygon3D/FinishDetector" unique_id=2130445193]
transform = Transform3D(0.9659258, 0, 0.25881904, 0, 1, 0, -0.25881904, 0, 0.9659258, 0, 0, 0.78361464)
shape = SubResource("BoxShape3D_5g37k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CSGPolygon3D/FinishDetector" unique_id=1486598639]
mesh = SubResource("BoxMesh_nuiww")

[node name="Timer" type="Timer" parent="." unique_id=291425853]
wait_time = 0.1

[node name="Checkpoint1" type="Area3D" parent="." unique_id=593801342 groups=["Checkpoints", "Start and Finish Detectors"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.299573)
collision_layer = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Checkpoint1" unique_id=2075304324]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.271637, 0, 0)
shape = SubResource("BoxShape3D_kerva")

[node name="Checkpoint2" type="Area3D" parent="." unique_id=941165851 groups=["Checkpoints", "Start and Finish Detectors"]]
transform = Transform3D(0.80626905, 0, -0.5915489, 0, 1, 0, 0.5915489, 0, 0.80626905, -20.03661, 0, 14.964659)
collision_layer = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Checkpoint2" unique_id=1027172610]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.271637, 0, 0)
shape = SubResource("BoxShape3D_kerva")

[connection signal="body_entered" from="CSGPolygon3D/StartDetector" to="." method="_on_start_detector_body_entered"]
[connection signal="body_entered" from="CSGPolygon3D/FinishDetector" to="." method="_on_finish_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Checkpoint1" to="." method="_on_checkpoint_1_body_entered"]
[connection signal="body_entered" from="Checkpoint2" to="." method="_on_checkpoint_2_body_entered"]
